added file [ ui layout example ]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "tui-renderer"
 version = "0.1.0"
 edition = "2021"
+autoexamples = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 termion = "1"
 unicode-width = "0"
+
+[[example]]
+name = "ui"
